# databricks-mcp-server

./: .gitignore  README.md  app.yaml  pyproject.toml
server/: app.py  main.py  tools.py  utils.py
static/: index.html
